Gifsicle NEWS

Version 1.5   27.Sep.1998

* `--help' now prints on stdout, as according to the GNU standards.

* Changes to support Win32 port thanks to Emil Mikulic
  <darkmoon@connexus.net.au>.


Version 1.4.1   16.Sep.1998

* Fixed `--unoptimize' bug: a frame's transparency could disappear under rare
  circumstances. Bug reported by Rodney Brown <rodneybrown@pmsc.com>


Version 1.4   12.Sep.1998

* Added `--extension' and `--app-extension'.


Version 1.3.4   7.Sep.1998

* More configuration changes.

* Fixed bug in gifview `--geometry' option processing: `--geometry -0-0'
  wasn't recognized.


Version 1.3.2   5.Sep.1998

* Fixed configuration bugs reported by Alexander Mai
  <st002279@hrzpub.tu-darmstadt.de> (OS/2 build didn't work).


Version 1.3.1   4.Sep.1998

* Fixed configuration bug: int32_t could be improperly redefined. Reported by
  Anne "Idiot" Dudfield <anne@lvld.hp.com> and Dax Kelson
  <dkelson@inconnect.com>.


Version 1.3   3.Sep.1998

* Added `--flip-*' and `--rotate-*' options.

* Fixed rare bug in GIF writing code: the last pixel in a frame could
  previously become corrupted.


Version 1.3b1   2.Aug.1998

* Optimization has been completely overhauled. All optimization functions
  are in a separate file, optimize.c. Some bugs have been caught.
  Optimization is now quite powerful, and rarely expands any input file.
  (An expansion of 1-30 bytes usually means that the input file cheated by
  leaving off 'end-of-image' codes, which the standard says must be used.)
  People interested in making optimization even better should contact me,
  or just go ahead and hack the code. Thanks again to David Hedbor
  <david@hedbor.org> for providing test cases.

  Specific changes:

  - The optimizer can handle any input file, even one with local colormaps or
    more than 256 colors. If there are more than 256 colors, an optimal subset
    is placed in the global colormap.

  - The global colormap is reordered so that some images can use a small