@@ -4,11 +4,11 @@ VERSION=1.5
 AC_SUBST(VERSION)
 
 AC_PROG_CC
+AC_PROG_CPP
 AC_C_CONST
 
 AC_PROG_INSTALL
-
-AC_PROG_CPP
+AC_ARG_PROGRAM
 
 build_gifview=
 AC_ARG_ENABLE(gifview,
